create nav and login page

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,8 +5,119 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:chatAppClient"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="LoginView" Height="900" Width="1250" WindowStyle="None" ResizeMode="NoResize" WindowStartupLocation="CenterScreen"
+        MouseDown="Window_MouseDown" Background="Transparent" AllowsTransparency="True">
+    <Border CornerRadius="50"
+            BorderThickness="5"
+            Opacity="0.95">
+        <Border.BorderBrush>
+            <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                <GradientStop Color="#301E67" Offset="0" />
+                <GradientStop Color="#ED2B2A" Offset="0.5" />
+                <GradientStop Color="#F15A59" Offset="1" />
+            </LinearGradientBrush>
+        </Border.BorderBrush>
 
-    </Grid>
+        <Border.Background>
+            <LinearGradientBrush StartPoint="0,2" EndPoint="1,0">
+                <GradientStop Color="#301E67" Offset="0.45" />
+                <GradientStop Color="#ED2B2A" Offset="1" />
+            </LinearGradientBrush>
+        </Border.Background>
+
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="30" />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition Width="30"/>
+                    <ColumnDefinition Width="30"/>
+                    <ColumnDefinition Width="45"/>
+                </Grid.ColumnDefinitions>
+
+                <TextBlock Text="Butter Chicken Chat Application"
+                           Foreground="DarkGray"
+                           FontSize="20"
+                           FontFamily="Montserrat"
+                           Grid.Column="0"
+                           VerticalAlignment="Center"
+                           Margin="40,0,0,0"
+                           />
+
+                <Button x:Name="btnMinimize"
+                       
+                        BorderThickness="0"
+                        Content="-"
+                        Foreground="White"
+                        FontSize="20"
+                        FontFamily="Montserrat"
+                        Cursor="Hand" 
+                        Grid.Column="1"
+                        Click="btnMinimize_Click">
+
+                    <Button.Style>
+                        <Style TargetType="Button">
+                            <Setter Property="Background" Value="#301E67"></Setter>
+                            <Style.Triggers >
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="Background" Value="#F15A59"></Setter>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Button.Style>
+
+                    <Button.Template>
+                        <ControlTemplate TargetType="Button">
+                            <Border Width="26" Height="26" CornerRadius="13" Background="{TemplateBinding Background}">
+                                <ContentPresenter VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                            </Border>
+                        </ControlTemplate>
+                    </Button.Template>
+                </Button>
+
+                <Button x:Name="btnClose"
+                        BorderThickness="0"
+                        Content="X"
+                        Foreground="White"
+                        FontSize="20"
+                        FontFamily="Montserrat"
+                        Cursor="Hand" 
+                        Grid.Column="2"
+                        Click="btnClose_Click">
+                    <Button.Style>
+                        <Style TargetType="Button">
+                            <Setter Property="Background" Value="#301E67"></Setter>
+                            <Style.Triggers >
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="Background" Value="#F15A59"></Setter>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Button.Style>
+
+                    <Button.Template>
+                        <ControlTemplate TargetType="Button">
+                            <Border Width="26" Height="26" CornerRadius="13" Background="{TemplateBinding Background}">
+                                <ContentPresenter VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                            </Border>
+                        </ControlTemplate>
+                    </Button.Template>
+                </Button>
+            </Grid>
+
+            <StackPanel  
+                            Grid.Row="2"
+                            Orientation="Vertical"
+                            Margin="0,10,0,0">
+                <Frame x:Name="frame" HorizontalAlignment="Center" Width="1250" />
+            </StackPanel>
+
+
+        </Grid>
+
+    </Border>
 </Window>
