--- a/View/ChatView.xaml
+++ b/View/ChatView.xaml
@@ -9,28 +9,167 @@
         Background="Transparent" >
 
     <Grid>
-        <StackPanel Width="500"
+        <StackPanel Width="1200"
                             Grid.Row="2"
-                            Orientation="Vertical"
-                            Margin="0,10,0,0">
-            <Image Source="/Assets/messenger.png"
-                           Width="300" 
-                           Height="300"/>
-            <TextBlock Text="Basdasdasdasdasd"
-                           Foreground="White"
-                           FontSize="40"
-                           FontWeight="Medium"
-                           FontFamily="Montserrat"
-                           HorizontalAlignment="Center"/>
+                            Orientation="Horizontal"
+                            Margin="0,25,0,25">
 
-            
-            <!--TextBlock Text="no yet registered? "
-                           Foreground="White"
-                           FontSize="20"
-                           FontWeight="Medium"
-                           FontFamily="Montserrat"
-                           Margin="0,50,0,0"/>
-                -->
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="400"/>
+                    <ColumnDefinition Width="800"/>
+                </Grid.ColumnDefinitions>
+
+                <Grid Grid.Column="0">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="100" />
+                        <RowDefinition Height="650"/>
+                    </Grid.RowDefinitions>
+
+                    <TextBlock Text="Active users"
+                               Grid.Row="0"
+                               Foreground="DarkGray"
+                               FontSize="20"
+                               FontFamily="Montserrat"
+                               VerticalAlignment="Center"
+                               HorizontalAlignment="Center"
+                               Margin="0,0,0,0"
+                               />
+
+                    <TextBlock x:Name="tblockChatUsers"
+                        Grid.Row="1"
+                        Background="#F15A59"
+                        Margin="20, 20, 20, 20"/>
+
+                </Grid>
+
+                <Grid Grid.Column="1">
+
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="100"/>
+                        <RowDefinition Height="525"/>
+                        <RowDefinition Height="125"/>
+                        
+                    </Grid.RowDefinitions>
+
+                    <Grid 
+                        Grid.Row="0">
+
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="600"/>
+                            <ColumnDefinition Width="200"/>
+                        </Grid.ColumnDefinitions>
+
+                        
+
+                        <Button x:Name="btnLogout"
+                       
+                        BorderThickness="0"
+                        Content="Logout"
+                        Foreground="White"
+                        FontSize="20"
+                        FontFamily="Montserrat"
+                        Cursor="Hand" 
+                        Grid.Column="1"
+                        Margin="0,0,0,0"
+                        Click="btnLogout_Click">
+
+                            <Button.Style>
+                                <Style TargetType="Button">
+                                    <Setter Property="Background" Value="#301E67"></Setter>
+                                    <Style.Triggers >
+                                        <Trigger Property="IsMouseOver" Value="True">
+                                            <Setter Property="Background" Value="#F15A59"></Setter>
+                                        </Trigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </Button.Style>
+
+                            <Button.Template>
+                                <ControlTemplate TargetType="Button">
+                                    <Border Width="150" Height="40" CornerRadius="20" Background="{TemplateBinding Background}">
+                                        <ContentPresenter VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                                    </Border>
+                                </ControlTemplate>
+                            </Button.Template>
+                        </Button>
+
+                    </Grid>
+                    
+                    <TextBlock 
+                        x:Name="tblockChatMsg"
+                        Grid.Row="1"
+                        Background="#F15A59"
+                        Margin="20"/>
+
+                    <Grid 
+                        Grid.Row="2"
+                        Margin="10,-30,10,0">
+
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="600"/>
+                            <ColumnDefinition Width="200"/>
+                        </Grid.ColumnDefinitions>
+
+                        <TextBox    x:Name="txtChatSend"
+                            Grid.Column="0"
+                            FontSize="25"
+                            FontWeight="Medium"
+                            FontFamily="Montserrat"
+                            Foreground="White"
+                            CaretBrush="LightGray"
+                            BorderBrush="DarkGray"
+                            BorderThickness="0,0,0,1"
+                            Height="40"
+                            VerticalAlignment="Center"
+                            Margin="10,0,10,0"
+                            Padding="25,0,0,0">
+                            <TextBox.Background>
+                                <ImageBrush ImageSource="/Assets/user-icon.png" 
+                                    Stretch="none"  AlignmentX="Left"/>
+                            </TextBox.Background>
+                        </TextBox>
+
+                        <Button x:Name="btnSend"
+                       
+                        BorderThickness="0"
+                        Content="Send"
+                        Foreground="White"
+                        FontSize="20"
+                        FontFamily="Montserrat"
+                        Cursor="Hand" 
+                        Grid.Column="1"
+                        Margin="0,0,0,0"
+                        Click="btnSend_Click">
+
+                            <Button.Style>
+                                <Style TargetType="Button">
+                                    <Setter Property="Background" Value="#301E67"></Setter>
+                                    <Style.Triggers >
+                                        <Trigger Property="IsMouseOver" Value="True">
+                                            <Setter Property="Background" Value="#F15A59"></Setter>
+                                        </Trigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </Button.Style>
+
+                            <Button.Template>
+                                <ControlTemplate TargetType="Button">
+                                    <Border Width="150" Height="40" CornerRadius="20" Background="{TemplateBinding Background}">
+                                        <ContentPresenter VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                                    </Border>
+                                </ControlTemplate>
+                            </Button.Template>
+                        </Button>
+
+                    </Grid>
+                    
+                    
+
+                </Grid>
+
+            </Grid>
+
 
         </StackPanel>
 
@@ -39,3 +178,13 @@
 
 
 </Page>
+
+
+<!--
+   
+color palette 
+301E67
+ED2B2A
+F15A59 
+    
+    -->
